--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "redux": "^4.0.4",
     "redux-form": "^8.2.4",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.87.3"
+    "semantic-ui-react": "^0.87.3",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
